new site update

--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <script rel="script" type="text/javascript" src="index.js"></script>
 </head>
 
-<header class="banner">
-    <p>ALERT: THIS SITE IS CURRENTLY UNDER CONSTRUCTION, BUT FEEL FREE TO USE IT <ANYWAY></ANYWAY>!</p>
-</header>
+<!--<header class="banner">-->
+    <!--<p>ALERT: THIS SITE IS CURRENTLY UNDER CONSTRUCTION, BUT FEEL FREE TO USE IT <ANYWAY></ANYWAY>!</p>-->
+<!--</header>-->
 
 <body>
 
     <section id="title-section">
-        <div class="navigation">
-            <p onclick="document.getElementById('about-section').scrollIntoView({behavior: 'smooth'});">ABOUT</p>
-            <p onclick="document.getElementById('portfolio-scrollto').scrollIntoView({behavior: 'smooth'});">PORTFOLIO</p>
-            <p onclick="document.getElementById('personal-section').scrollIntoView({behavior: 'smooth'});">PERSONAL</p>
-            <p onclick="document.getElementById('contact-section').scrollIntoView({behavior: 'smooth'});">CONTACT</p>
-            <a href="images/Max_Dryer_Resume_2019.pdf" target="_blank"><p>RESUME</p></a>
-        </div>
-        <div class="name-career">
-            <h1>Max Dryer</h1>
-            <p>front end web developer</p>
-        </div>
+        <ul class="navigation">
+            <li onclick="document.getElementById('about-section').scrollIntoView({behavior: 'smooth'});">ABOUT</li>
+            <li onclick="document.getElementById('portfolio-scrollto').scrollIntoView({behavior: 'smooth'});">PORTFOLIO</li>
+            <li onclick="document.getElementById('personal-section').scrollIntoView({behavior: 'smooth'});">PERSONAL</li>
+            <li onclick="document.getElementById('contact-section').scrollIntoView({behavior: 'smooth'});">CONTACT</li>
+            <a href="images/Max_Dryer_Resume_2019.pdf" target="_blank"><li>RESUME</li></a>
+        </ul>
+        <!--<div class="name-career">-->
+            <!--<h1>Max Dryer</h1>-->
+            <!--<p>front end web developer</p>-->
+        <!--</div>-->
     </section>
 
     <section id="about-section">
@@ -50,7 +50,7 @@
 
     <section id="portfolio-section">
         <div class="project-section" id="portfolio-scrollto">
-            <div class="project-image innovate-within" style="margin-right: 10%">
+            <div class="project-image innovate-within draw" style="margin-right: 10%">
 
             </div>
             <div class="project-description">
@@ -71,7 +71,7 @@
         </div>
 
         <div class="project-section" style="flex-direction: row-reverse">
-            <div class="project-image chirper-app">
+            <div class="project-image chirper-app draw">
 
             </div>
             <div class="project-description" style="margin-right: 10%">
@@ -93,7 +93,7 @@
         </div>
 
         <div class="project-section">
-            <div class="project-image sales-marketing" style="margin-right: 10%">
+            <div class="project-image sales-marketing draw" style="margin-right: 10%">
 
             </div>
             <div class="project-description">
@@ -114,7 +114,7 @@
         </div>
 
         <div class="project-section" style="flex-direction: row-reverse">
-            <div class="project-image clearpath">
+            <div class="project-image clearpath draw">
 
             </div>
             <div class="project-description" style="margin-right: 10%">
